log/build_2024-08-08_16-14-21/motor_control/stderr.log
  File "/home/jun/ros2_ws/install/motor_control/lib/python3.8/site-packages/motor_control/realsense_camera_node.py", line 51
    cv2.wait
           ^
SyntaxError: unexpected EOF while parsing

